EN-19582: adjust magnifying glass icon to align it correctly (#5769)

--- a/frontend/app/styles/admin-users-v2/admin-users-v2.scss
+++ b/frontend/app/styles/admin-users-v2/admin-users-v2.scss
@@ -129,6 +129,10 @@
     align-items: center;
     display: flex;
 
+    span.socrata-icon-search {
+      top: -5px !important;
+    }
+
     .add-user-button {
       margin-left: 10px;
     }
